syntax = "proto3";

package pinax.ethereum.blobs.v1;

option go_package = "github.com/pinax-network/blobs-service/pb/pinax/blobs/v1;pbbmsrv";

import "google/protobuf/timestamp.proto";

message Blobs { repeated Blob blobs = 1; }

message Blob {
  uint32 index = 1;
  bytes blob = 2;
  bytes kzg_commitment = 3;
  bytes kzg_proof = 4;
  SignedBlockHeader signed_block_header = 5;
  repeated bytes kzg_commitment_inclusion_proof = 6;
  Extra extra = 7;
}

message SignedBlockHeader {
  Message message = 1;
  bytes signature = 2;
}

message Message {
  uint64 slot = 1;
  uint64 proposer_index = 2;
  bytes parent_root = 3;
  bytes state_root = 4;
  bytes body_root = 5;
}

message Extra {
  uint64 block_number = 1;
  google.protobuf.Timestamp timestamp = 2;
}
